--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "reading-frontend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "dev": "webpack --config config/webpack/dev.config.js",
+    "start": "webpack-dev-server --config config/webpack/dev.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,9 +19,27 @@
   },
   "homepage": "https://github.com/cyberhermits/reading-frontend#readme",
   "dependencies": {
-    "react": "^16.4.1"
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
-    "webpack": "^4.16.1"
+    "awesome-typescript-loader": "^5.2.0",
+    "css-loader": "^1.0.0",
+
+    "react-hot-loader": "^4.3.3",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "^0.21.0",
+    "ts-loader": "^4.4.2",
+    "typescript": "^2.9.2",
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-hot-middleware": "^2.22.3"
   }
 }
