--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,33 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "src/app/*",
+                "src/app/redux/*"
+            ]
+        },
+        "outDir": "build",
         "sourceMap": true,
+        "inlineSourceMap": false,
+        "inlineSources": false,
+        "experimentalDecorators": true,
+        "noUnusedParameters": true,
+        "noUnusedLocals": true,
         "noImplicitAny": true,
         "module": "commonjs",
         "target": "es5",
-        "jsx": "react"
+        "jsx": "react",
+        "moduleResolution": "node"
     },
-    "include": [
-        "./src/**/*"
-    ]
+    "exclude": [
+        "node_modules",
+        "build",
+        "typings/main",
+        "typings/main.d.ts"
+    ],
+    "awesomeTypescriptLoaderOptions": {
+        "useCache": true,
+        "useBabel": true
+    }
 }
